[gd_scene load_steps=45 format=3 uid="uid://bx03tt7pqn2w3"]

[ext_resource type="Script" path="res://player_characters/ArcaneArcher/arcane_archer.gd" id="1_7p3nu"]
[ext_resource type="PackedScene" uid="uid://oqqb5avodunf" path="res://projectiles/Arrow/arrow.tscn" id="2_4ynji"]
[ext_resource type="Texture2D" uid="uid://deg3ar4m6xmlx" path="res://player_characters/Samurai/Sprites/spritesheet.png" id="3_al1gc"]
[ext_resource type="Texture2D" uid="uid://bd47o3ya5cjhv" path="res://player_characters/ArcaneArcher/Sprites/spritesheet_white.png" id="4_p2gll"]
[ext_resource type="AudioStream" uid="uid://kcmg7ss151kg" path="res://audio/samurai_jump.mp3" id="5_8munn"]
[ext_resource type="AudioStream" uid="uid://bfnk5xnwxytpw" path="res://audio/samurai_run.mp3" id="6_uwlda"]
[ext_resource type="AudioStream" uid="uid://bw8pkftep0ek0" path="res://audio/samurai_hit.mp3" id="7_lpoyf"]
[ext_resource type="AudioStream" uid="uid://br4x7p18w3ci" path="res://audio/samurai_death.mp3" id="8_2klf3"]
[ext_resource type="AudioStream" uid="uid://d25qfut0ccevk" path="res://audio/bow_charge.mp3" id="9_ddoeh"]
[ext_resource type="AudioStream" uid="uid://ia8fyfmdd0jf" path="res://audio/bow_release.mp3" id="10_awmha"]

[sub_resource type="AtlasTexture" id="AtlasTexture_anegr"]
atlas = ExtResource("3_al1gc")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o086y"]
atlas = ExtResource("3_al1gc")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jy4vm"]
atlas = ExtResource("3_al1gc")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5oc8"]
atlas = ExtResource("3_al1gc")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3n72"]
atlas = ExtResource("3_al1gc")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r2po"]
atlas = ExtResource("3_al1gc")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l14mb"]
atlas = ExtResource("3_al1gc")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3mwy"]
atlas = ExtResource("3_al1gc")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ije8t"]
atlas = ExtResource("3_al1gc")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv20b"]
atlas = ExtResource("3_al1gc")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ujl6"]
atlas = ExtResource("3_al1gc")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7nmg"]
atlas = ExtResource("3_al1gc")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey1jd"]
atlas = ExtResource("3_al1gc")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rheoy"]
atlas = ExtResource("4_p2gll")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7n2s"]
atlas = ExtResource("3_al1gc")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ons3t"]
atlas = ExtResource("3_al1gc")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs1kt"]
atlas = ExtResource("3_al1gc")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0kpk"]
atlas = ExtResource("3_al1gc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3ild"]
atlas = ExtResource("3_al1gc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1f81"]
atlas = ExtResource("3_al1gc")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l434m"]
atlas = ExtResource("3_al1gc")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvnfo"]
atlas = ExtResource("3_al1gc")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fank"]
atlas = ExtResource("3_al1gc")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5q5n"]
atlas = ExtResource("3_al1gc")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_khbt4"]
atlas = ExtResource("3_al1gc")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hvww"]
atlas = ExtResource("3_al1gc")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mieax"]
atlas = ExtResource("3_al1gc")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aieua"]
atlas = ExtResource("3_al1gc")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_symjo"]
atlas = ExtResource("3_al1gc")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_md0vi"]
atlas = ExtResource("3_al1gc")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5do2"]
atlas = ExtResource("3_al1gc")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6wpq"]
atlas = ExtResource("3_al1gc")
region = Rect2(384, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_cy4aq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_anegr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o086y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jy4vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5oc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3n72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r2po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l14mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3mwy")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ije8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv20b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ujl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7nmg")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey1jd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rheoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7n2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ons3t")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs1kt")
}],
"loop": false,
"name": &"jumping",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0kpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3ild")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1f81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l434m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvnfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fank")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5q5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khbt4")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hvww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mieax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aieua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_symjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md0vi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5do2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6wpq")
}],
"loop": false,
"name": &"shooting",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0eeok"]
radius = 17.5
height = 65.0

[node name="ArcaneArcher" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_7p3nu")
arrow = ExtResource("2_4ynji")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_cy4aq")
animation = &"jumping"
autoplay = "default"
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 0)
shape = SubResource("CapsuleShape2D_0eeok")

[node name="ArrowOriginRight" type="Marker2D" parent="."]
position = Vector2(28.75, -11.25)

[node name="ArrowOriginLeft" type="Marker2D" parent="."]
position = Vector2(-26.25, -11.25)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -200)
zoom = Vector2(1.5, 1.5)
position_smoothing_speed = 7.0

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8munn")
volume_db = 14.054

[node name="run_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_uwlda")
pitch_scale = 0.65

[node name="damage_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_lpoyf")
volume_db = -6.559

[node name="death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_2klf3")

[node name="bow_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ddoeh")
volume_db = -9.142
pitch_scale = 1.5

[node name="arrow_release_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_awmha")
pitch_scale = 2.0

[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="finished" from="run_sound" to="." method="_on_run_sound_finished"]
